--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   <title>Apartmani Lux</title>
   <link rel="icon" type="image/png" href="images/favicon.png">
 
-  <!-- Bootstrap -->
-
+  <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 
   <link rel="stylesheet" href="style.css">
@@ -20,7 +19,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Lux</a>
+      <a class="navbar-brand" href="#">Apartments Lux</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -39,9 +38,16 @@
       </div>
     </div>
   </nav>
+  </div>
+  
+  <div class="bg-white-layer" id="home-section">
+
+    <h1 class="welcome-h1">Welcome to Cavtat</h1>
 
   </div>
 
+  
+  <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
 
 </body>
