Add gallery section

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=no">
 
   <title>Apartmani Lux</title>
   <link rel="icon" type="image/png" href="images/favicon.png">
@@ -29,7 +29,7 @@
             <a class="nav-link" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Galery</a>
+            <a class="nav-link" href="#gallery-section">Gallery</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Pricing</a>
@@ -46,6 +46,24 @@
 
   </div>
 
+  <div class="bg-white-layer" id="gallery-section">
+
+    <h1 class="gallery-h1">Gallery</h1>
+
+    <div class="gallery-container-master">
+      <img class="gallery-img" src="images\house1.jpg" alt="aparmant">
+      <img class="gallery-img" src="images\house2.jpg" alt="aparmant">  
+      <img class="gallery-img" src="images\house3.jpg" alt="aparmant">
+      <img class="gallery-img" src="images\house4.jpg" alt="aparmant">  
+    </div>
+
+  </div>
+
+  <div class="bg-white-layer" id="pricing-section">
+
+
+
+  </div>
   
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
