Add pricing section

--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
             <a class="nav-link" href="#gallery-section">Gallery</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Pricing</a>
+            <a class="nav-link" href="#pricing-section">Pricing</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contact</a>
           </li>
         </ul>
       </div>
@@ -61,7 +64,33 @@
 
   <div class="bg-white-layer" id="pricing-section">
 
+    <h1 class="pricing-h1">Pricing</h1>
 
+    <div class="price-cards-container">
+
+      <div class="price-card">
+        <h2 class="price-h2"><b>999€</b>/Night</h2>
+        <hr>
+        <p class="additional-info-card">For <b>1 - 3 nights</b></p>
+        <p class="additional-info-card">Airport transfer (free)</p>
+        <p class="additional-info-card">Private parking</p>
+      </div>
+
+      <div class="price-card">
+        <h2 class="price-h2"><b>888€</b>/Night</h2>
+        <hr>
+        <p class="additional-info-card">For <b>4+ nights</b></p>
+        <p class="additional-info-card">Airport transfer (free)</p>
+        <p class="additional-info-card">Private parking</p>
+      </div>
+
+    </div>
+
+  </div>
+
+  <div class="bg-white-layer" id="contact-section">
+
+    
 
   </div>
   
