Add contact section

--- a/index.html
+++ b/index.html
@@ -90,7 +90,14 @@
 
   <div class="bg-white-layer" id="contact-section">
 
-    
+    <h1 class="contact-h1">Contact us</h1>
+    <div class="contacts-container">
+      <div>
+        <a href="https://www.booking.com/hotel/hr/apartment-lux-dubrovnik.hr.html"><img class="booking-img" src="images\bookingcom.svg" alt="Booking.com"></a>
+        <a href=""><img class="airbnb-img" src="images\airbnb.svg" alt="Airbnb.com"></a>  
+      </div>
+      <a href=""><img class="gmail-img" src="images\gmail.svg" alt="Gmail"></a>
+    </div>
 
   </div>
   
